# iotivity-lite

port/linux/: CMakeLists.txt
